--- a/src/main/resources/static/index.css
+++ b/src/main/resources/static/index.css
@@ -5,7 +5,7 @@
 body {
     font-family: Arial, sans-serif;
     background: linear-gradient(to right, #9f94ac, #263e57);
-    color: rgb(7, 5, 5);
+    color: #00b7ff;
     
     margin: 0;
    
