--- a/src/main/resources/templates/Login-Page.html
+++ b/src/main/resources/templates/Login-Page.html
@@ -8,7 +8,7 @@
 <body>
     <div class="container mt-5">
         <h1 class="mb-4">Login</h1>
-        <form th:action="@{/teachers/login}" method="post">
+        <form th:action="@{/login}" method="post">
             <div class="form-group">
                 <label for="username">Username:</label>
                 <input type="text" class="form-control" id="username" name="username" required>
