--- a/src/main/resources/templates/admin_teacher_form.html
+++ b/src/main/resources/templates/admin_teacher_form.html
@@ -8,7 +8,7 @@
 <body>
 <div class="container mt-5">
     <h1 class="mb-4">Edit Assignment</h1>
-    <form th:action="@{/teachers/admin/edit}" th:object="${teacher}" method="post">
+    <form th:action="@{/admin/teachers/edit}" th:object="${teachers}" method="post">
 
         <div class="form-group">
             <label for="first_name">ID</label>
