--- a/src/main/resources/templates/create_student_form.html
+++ b/src/main/resources/templates/create_student_form.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container mt-5">
         <h1 class="mb-4">Register Student</h1>
-        <form th:action="@{/students/reg}" th:object="${students}" method="post" class="needs-validation" novalidate>
+        <form th:action="@{/admin/students/reg}" th:object="${students}" method="post" class="needs-validation" novalidate>
             <div class="form-group">
                 <label for="firstName">First Name:</label>
                 <input type="text" class="form-control" id="first_name" th:field="*{firstName}" required>
