--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,7 +16,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="/students">Students</a>
+                    <a class="nav-link" href="/login">Admin</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/teachers">Teachers</a>
@@ -42,52 +42,14 @@
         <div class="container">
             <h1>Welcome to the School Management System</h1>
             <p class="lead">Manage students, teachers, classes, and schedules efficiently.</p>
-            <a href="/students" class="btn btn-light btn-lg">Get Started</a>
-        </div>
-    </section>
-
-    <!-- Features Section -->
-    <section class="features py-5">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-4 col-md-6 mb-4">
-                    <div class="card">
-                        <div class="card-body text-center">
-                            <i class="fas fa-user-graduate fa-3x mb-3 text-primary"></i>
-                            <h5 class="card-title">Student Management</h5>
-                            <p class="card-text">Add, edit, and manage student information.</p>
-                            <a th:href="@{/students/page}" class="btn btn-primary">Manage Students</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 mb-4">
-                    <div class="card">
-                        <div class="card-body text-center">
-                            <i class="fas fa-chalkboard-teacher fa-3x mb-3 text-primary"></i>
-                            <h5 class="card-title">Teacher Management</h5>
-                            <p class="card-text">Add, edit, and manage teacher information.</p>
-                            <a th:href="@{/teachers/page}" class="btn btn-primary">Manage Teachers</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 mb-4">
-                    <div class="card">
-                        <div class="card-body text-center">
-                            <i class="fas fa-school fa-3x mb-3 text-primary"></i>
-                            <h5 class="card-title">Class Management</h5>
-                            <p class="card-text">Organize and manage classes and schedules.</p>
-                            <a th:href="@{/teachers/login}" class="btn btn-primary">Manage Classes</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <a th:href="@{/login}"  class="btn btn-light btn-lg">Login</a>
         </div>
     </section>
 
     <!-- Footer -->
     <footer class="bg-light text-center py-4">
         <div class="container">
-            <p>&copy; 2024 School Management System. All rights reserved.</p>
+            <p>&copy; 2024 Universal Group Corp. All rights reserved.</p>
         </div>
     </footer>
 
