--- a/src/main/resources/templates/student_page_list.html
+++ b/src/main/resources/templates/student_page_list.html
@@ -12,8 +12,8 @@
 <body>
     <div class="container mt-5">
         <h1 class="mb-4">Student List</h1>
-        <a th:href="@{/students/new}" class="btn btn-primary mb-3">Create New Student</a>
-        <a th:href="@{/home}" class="btn btn-primary mb-4">Back to Home</a>
+        <a th:href="@{/admin/students/new}" class="btn btn-primary mb-3">Create New Student</a>
+        <a th:href="@{/admin/dashboard}" class="btn btn-primary mb-4">Back to Home</a>
         <div class="table-responsive">
             <table class="table table-striped table-bordered">
                 <thead class="thead-dark">
@@ -37,8 +37,8 @@
                         <td th:text="${student.subjects}"></td>
                         
                         <td>
-                            <a th:href="@{/students/edit/{id}(id=${student.id})}" class="btn btn-warning btn-sm mr-1">Edit</a>
-                            <a th:href="@{/students/delete/{id}(id=${student.id})}" class="btn btn-danger btn-sm">Delete</a>
+                            <a th:href="@{/admin/students/edit/{id}(id=${student.id})}" class="btn btn-warning btn-sm mr-1">Edit</a>
+                            <a th:href="@{/admin/students/delete/{id}(id=${student.id})}" class="btn btn-danger btn-sm">Delete</a>
                         </td>
                     </tr>
                 </tbody>
