--- a/src/main/resources/templates/admin_page.html
+++ b/src/main/resources/templates/admin_page.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
     <title>School Management System</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" th:href="@{/dash.css}">
-    
+
 </head>
+
 <body>
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="#">School Management System</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -56,7 +59,7 @@
                             <i class="fas fa-user-graduate fa-3x mb-3"></i>
                             <h5 class="card-title">Student Management</h5>
                             <p class="card-text">Add, edit, and manage student information.</p>
-                            <a th:href="@{/students/page}" class="btn btn-primary">Manage Students</a>
+                            <a th:href="@{/admin/students/page}" class="btn btn-primary">Manage Students</a>
                         </div>
                     </div>
                 </div>
@@ -66,7 +69,7 @@
                             <i class="fas fa-chalkboard-teacher fa-3x mb-3"></i>
                             <h5 class="card-title">Teacher Management</h5>
                             <p class="card-text">Add, edit, and manage teacher information.</p>
-                            <a th:href="@{/teachers/page}" class="btn btn-primary">Manage Teachers</a>
+                            <a th:href="@{/admin/teachers/page}" class="btn btn-primary">Manage Teachers</a>
                         </div>
                     </div>
                 </div>
@@ -113,7 +116,11 @@
             </div>
         </div>
     </section>
-
+    <section class="logout">
+        <div class="btn btn-primary">
+            <a th:href="@{/logout}" class="btn btn-light btn-lg">Logout</a>
+        </div>
+    </section>
     <!-- Footer -->
     <footer class="footer text-center py-4">
         <div class="container">
@@ -128,7 +135,5 @@
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
-
-
-
