--- a/src/main/resources/templates/create_teacher_form.html
+++ b/src/main/resources/templates/create_teacher_form.html
@@ -14,12 +14,12 @@
         <form th:action="@{/teachers/reg}" th:object="${teacher}" method="post" class="needs-validation" novalidate>
             <div class="form-group">
                 <label for="first_name">First Name:</label>
-                <input type="text" class="form-control" id="first_name" th:field="*{first_name}" required>
+                <input type="text" class="form-control" id="first_name" th:field="*{firstname}" required>
                 <div class="invalid-feedback">Please provide a first name.</div>
             </div>
             <div class="form-group">
                 <label for="last_name">Last Name:</label>
-                <input type="text" class="form-control" id="last_name" th:field="*{last_name}" required>
+                <input type="text" class="form-control" id="last_name" th:field="*{lastname}" required>
                 <div class="invalid-feedback">Please provide a last name.</div>
             </div>
             <div class="form-group">
@@ -27,14 +27,10 @@
                 <input type="text" class="form-control" id="surname" th:field="*{surname}" required>
                 <div class="invalid-feedback">Please provide a surname.</div>
             </div>
-            <div class="form-group">
-                <label for="email">E-Mail</label>
-                <input type="text" class="form-control" id="email" th:field="*{email}" required>
-                <div class="invalid-feedback">Please provide a email</div>
-            </div>
+           
             <div class="form-group">
                 <label for="last_name">UserName:</label>
-                <input type="text" class="form-control" id="last_name" th:field="*{username}" required>
+                <input type="text" class="form-control" id="lastname" th:field="*{username}" required>
                 <div class="invalid-feedback">Please provide a username.</div>
             </div>
             <div class="form-group">
@@ -43,7 +39,7 @@
                 <div class="invalid-feedback">Please provide a password.</div>
             </div>
 
-            
+
 
             <!--
             <div class="form-group">
@@ -55,10 +51,10 @@
                     <option value="Other">Other</option>
                 </select>
                 <div class="invalid-feedback">Please select a gender.</div>
-            </div>-->
-            
-            
-                     
+            </div>
+
+
+
             <div class="form-group">
                 <label for="major">Subjects:</label>
                 <select type="text" class="form-control" id="subjects" th:field="*{major}" required>
@@ -82,10 +78,10 @@
                     <option value="2nd Grad">2nd Grade</option>s
                     <option value="1st Grade">1st Grade</option>
                     <option value="R Grade">R Grade</option>
-                    
+
                 </select>
                 <div class="invalid-feedback">Please provide subjects.</div>
-            </div>
+            </div>-->
 
             <button type="submit" class="btn btn-primary">Save</button>
         </form>
