--- a/src/main/resources/templates/student_page_list.html
+++ b/src/main/resources/templates/student_page_list.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
     <title>Student List</title>
-    
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" th:href="@{/list.css}">
-    
-    </head>
+
+</head>
+
 <body>
     <div class="container mt-5">
         <h1 class="mb-4">Student List</h1>
@@ -22,8 +24,10 @@
                         <th>First Name</th>
                         <th>Last Name</th>
                         <th>ID Number</th>
-                        <th>Email</th>
-                        <th>Subjects</th>
+                        <th>Address</th>
+                        <th>Parent Name</th>
+                        <th>Parent Contacts</th>
+                        <th>Birth Date</th>
                         <th>Actions</th>
                     </tr>
                 </thead>
@@ -33,22 +37,26 @@
                         <td th:text="${student.firstName}"></td>
                         <td th:text="${student.lastName}"></td>
                         <td th:text="${student.id_number}"></td>
-                        <td th:text="${student.email}"></td>
-                        <td th:text="${student.subjects}"></td>
-                        
+                        <td th:text="${student.address}"></td>
+                        <td th:text="${student.parent_name}"></td>
+                        <td th:text="${student.parent_contact}"></td>
+                        <td th:text="${student.date_of_birth}"></td>
                         <td>
-                            <a th:href="@{/admin/students/edit/{id}(id=${student.id})}" class="btn btn-warning btn-sm mr-1">Edit</a>
-                            <a th:href="@{/admin/students/delete/{id}(id=${student.id})}" class="btn btn-danger btn-sm">Delete</a>
+                            <a th:href="@{/admin/students/edit/{id}(id=${student.id})}"
+                                class="btn btn-warning btn-sm mr-1">Edit</a>
+                            <a th:href="@{/admin/students/delete/{id}(id=${student.id})}"
+                                class="btn btn-danger btn-sm">Delete</a>
                         </td>
                     </tr>
                 </tbody>
             </table>
         </div>
     </div>
-    
+
     <!-- Bootstrap JS and dependencies -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
+
 </html>
