--- a/src/main/resources/templates/teacher_edit.html
+++ b/src/main/resources/templates/teacher_edit.html
@@ -1,60 +1,55 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
     <title>Edit Assignment</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
+
 <body>
-<div class="container mt-5">
-    <h1 class="mb-4">Edit Assignment</h1>
-    <form th:action="@{/teachers/profile/edit}" th:object="${teacher}" method="post">
+    <div class="container mt-5">
+        <h1 class="mb-4">Edit Assignment</h1>
+        <form th:action="@{/teachers/profile/edit}" th:object="${teacher}" method="post">
 
-        <div class="form-group">
-            <label for="first_name">ID</label>
-            <input type="text" th:field="*{id}" class="form-control" id="id" required>
-        </div>
+            <div class="form-group">
+                <label for="first_name">ID</label>
+                <input type="text" th:field="*{id}" class="form-control" id="id" required>
+            </div>
 
-        <div class="form-group">
-            <label for="first_name">First Name</label>
-            <input type="text" th:field="*{first_name}" class="form-control" id="first_name" required>
-        </div>
+            <div class="form-group">
+                <label for="first_name">First Name</label>
+                <input type="text" th:field="*{firstname}" class="form-control" id="first_name" required>
+            </div>
 
-        <div class="form-group">
-            <label for="last_name">last_name</label>
-            <input type="text" th:field="*{last_name}" class="form-control" id="last_name" required></input>
-        </div>
+            <div class="form-group">
+                <label for="last_name">last_name</label>
+                <input type="text" th:field="*{lastname}" class="form-control" id="last_name" required></input>
+            </div>
 
-        <div class="form-group">
-            <label for="surname">Surname</label>
-            <input type="text" th:field="*{surname}" class="form-control" id="surname" required>
-        </div>
+            <div class="form-group">
+                <label for="surname">Surname</label>
+                <input type="text" th:field="*{surname}" class="form-control" id="surname" required>
+            </div>
 
-        <div class="form-group">
-            <label for="username">Username</label>
-            <input type="text" th:field="*{username}" class="form-control" id="username" required>
-        </div>
+            <div class="form-group">
+                <label for="username">Username</label>
+                <input type="text" th:field="*{username}" class="form-control" id="username" required>
+            </div>
 
-        <div class="form-group">
-            <label for="password">password</label>
-            <input type="text" th:field="*{password}" class="form-control" id="password" required>
-        </div>
+            <div class="form-group">
+                <label for="password">password</label>
+                <input type="text" th:field="*{password}" class="form-control" id="password" required>
+            </div>
 
-        <div class="form-group">
-            <label for="major">Major</label>
-            <input type="text" th:field="*{major}" class="form-control" id="major" required>
-        </div>
 
-        <div class="form-group">
-            <label for="email">E-Mail</label>
-            <input type="text" th:field="*{email}" class="form-control" id="email" required>
-        </div>
 
-        <button type="submit" class="btn btn-primary">Update</button>
-    </form>
-</div>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+            <button type="submit" class="btn btn-primary">Update</button>
+        </form>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
+
 </html>
