--- a/src/main/resources/templates/teacher_edit.html
+++ b/src/main/resources/templates/teacher_edit.html
@@ -9,7 +9,7 @@
 
 <body>
     <div class="container mt-5">
-        <h1 class="mb-4">Edit Assignment</h1>
+        <h1 class="mb-4">Update User Profile </h1>
         <form th:action="@{/teachers/profile/edit}" th:object="${teacher}" method="post">
 
             <div class="form-group">
