--- a/src/main/resources/templates/assignment_create.html
+++ b/src/main/resources/templates/assignment_create.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
     <title>Create Assignment</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
+
 <body>
     <div class="container mt-5">
         <h1 class="mb-4">Create Assignment</h1>
-        <form th:action="@{/assignments/post}" th:object="${assignment}" method="post" class="needs-validation" novalidate>
+        <form th:action="@{/assignments/save}" th:object="${assignment}" method="post" class="needs-validation"
+            novalidate>
             <div class="form-group">
                 <label for="title">Title:</label>
                 <input type="text" class="form-control" id="title" th:field="*{title}" required>
@@ -33,4 +36,5 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
+
 </html>
