--- a/src/main/resources/templates/assignment_edit.html
+++ b/src/main/resources/templates/assignment_edit.html
@@ -1,31 +1,34 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
     <title>Edit Assignment</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
+
 <body>
-<div class="container mt-5">
-    <h1 class="mb-4">Edit Assignment</h1>
-    <form th:action="@{/assignments/edit/{id}(id=${assignment.id})}" th:object="${assignment}" method="post">
-        <div class="form-group">
-            <label for="title">Title</label>
-            <input type="text" th:field="*{title}" class="form-control" id="title" required>
-        </div>
-        <div class="form-group">
-            <label for="description">Description</label>
-            <textarea th:field="*{description}" class="form-control" id="description" required></textarea>
-        </div>
-        <div class="form-group">
-            <label for="dueDate">Due Date</label>
-            <input type="date" th:field="*{dueDate}" class="form-control" id="dueDate" required>
-        </div>
-        <button type="submit" class="btn btn-primary">Update</button>
-    </form>
-</div>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <div class="container mt-5">
+        <h1 class="mb-4">Edit Assignment</h1>
+        <form th:action="@{/assignments/update}" th:object="${assignment}" method="post">
+            <div class="form-group">
+                <label for="title">Title</label>
+                <input type="text" th:field="*{title}" class="form-control" id="title" required>
+            </div>
+            <div class="form-group">
+                <label for="description">Description</label>
+                <textarea th:field="*{description}" class="form-control" id="description" required></textarea>
+            </div>
+            <div class="form-group">
+                <label for="dueDate">Due Date</label>
+                <input type="date" th:field="*{dueDate}" class="form-control" id="dueDate" required>
+            </div>
+            <button type="submit" class="btn btn-primary">Update</button>
+        </form>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
+
 </html>
