--- a/src/main/resources/templates/create_teacher_form.html
+++ b/src/main/resources/templates/create_teacher_form.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
     <title>Create Student</title>
@@ -8,10 +9,12 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" th:href="@{/form.css}">
 </head>
+
 <body>
     <div class="container mt-5">
         <h1 class="mb-4">Create Teacher</h1>
-        <form th:action="@{/teachers/reg}" th:object="${teacher}" method="post" class="needs-validation" novalidate>
+        <form th:action="@{admin/teachers/reg}" th:object="${teacher}" method="post" class="needs-validation"
+            novalidate>
             <div class="form-group">
                 <label for="first_name">First Name:</label>
                 <input type="text" class="form-control" id="first_name" th:field="*{firstname}" required>
@@ -27,7 +30,7 @@
                 <input type="text" class="form-control" id="surname" th:field="*{surname}" required>
                 <div class="invalid-feedback">Please provide a surname.</div>
             </div>
-           
+
             <div class="form-group">
                 <label for="last_name">UserName:</label>
                 <input type="text" class="form-control" id="lastname" th:field="*{username}" required>
@@ -92,12 +95,12 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <!-- Custom JS for form validation -->
     <script>
-        (function() {
+        (function () {
             'use strict';
-            window.addEventListener('load', function() {
+            window.addEventListener('load', function () {
                 var forms = document.getElementsByClassName('needs-validation');
-                var validation = Array.prototype.filter.call(forms, function(form) {
-                    form.addEventListener('submit', function(event) {
+                var validation = Array.prototype.filter.call(forms, function (form) {
+                    form.addEventListener('submit', function (event) {
                         if (form.checkValidity() === false) {
                             event.preventDefault();
                             event.stopPropagation();
@@ -109,4 +112,5 @@
         })();
     </script>
 </body>
+
 </html>
